UI Update: Tidied up CSS files, fixed 'light text' error on dark mode, started adjusting icon hitboxes

--- a/src/application/dark.css
+++ b/src/application/dark.css
@@ -1,16 +1,17 @@
-/* Light Mode CSS for SmartKanban */
+/* Dark Mode CSS for SmartKanban */
 
-#nexab, #nexal, #bold, #medium, #light, #black, #light-list, #light-list:hover, #bold-list, #bold-list:hover, #search-text-field {
+/* Set Font Style */
+#nexab, #nexal, #bold, #medium, #light, #light-list, #light-list:hover, #bold-list, #bold-list:hover, #search-text-field, .text-field {
   -fx-text-fill: #ffffff;
 }
 
-
-
+/* Set Icon Style */
 #search-icon, #icon, #chev-icon, #chev-icon:hover, #add-icon-2 {
   -fx-fill: #ffffff;
 }
 
 
+/* Set Global Style */
 #bg {
   -fx-background-color: #0A0A0A;
 }
@@ -20,13 +21,16 @@
   -fx-opacity: 0.99;
 }
 
-#ln {
-  -fx-stroke: #ffffff;
-}
-
 #text-field-u, #text-field-ub {
   -fx-border-color: #ffffff;
   -fx-text-fill: #ffffff;
+  -fx-inner-text-fill: #ffffff;
+}
+
+
+/* Set Shape Style */
+#ln {
+  -fx-stroke: #ffffff;
 }
 
 #circle:hover {
@@ -35,27 +39,24 @@
 
 
 /* Set loginPage Style */
-
 #loginPg-btn-1, #loginPg-btn-1:hover, #loginPg-btn-2, #loginPg-btn-2:hover, #sk-big-title {
   -fx-text-fill: #ffffff;
 }
 
-/* Set newaccPage Style */
 
+/* Set newaccPage Style */
 #newacc-btn {
   -fx-text-fill: #ffffff;
 }
 
 
 /* Set homePage Style */
-
 #card-bold, #card-light {
   -fx-text-fill: #ffffff;
 }
 
 
-/* Set Settings Style */
-
+/* Set settingsPage Style */
 #sc-btn {
   -fx-fill: #0A0A0A;
   -fx-stroke: #ffffff;
