--- a/src/application/default.css
+++ b/src/application/default.css
@@ -26,19 +26,11 @@
   src: url("NotoSansJP-Bold.otf");
 }
 
-@font-face {
-  font-family: "NotoSans JP Black";
-  src: url("NotoSansJP-Black.otf");
-}
 
-
+/* Set Font Style */
 #nexab {
   -fx-font-family: "Nexa Bold";
   -fx-text-fill: #2F2E2E;
-}
-
-#sk-big-title {
-  -fx-font-family: "Nexa Bold";
 }
 
 #nexal {
@@ -60,14 +52,6 @@
   -fx-font-family: 'Noto Sans JP Regular';
   -fx-text-fill: #2F2E2E;
 }
-
-#black {
-  -fx-font-family: 'Noto Sans JP Black';
-  -fx-text-fill: #2F2E2E;
-}
-
-
-/* Set Global Style */
 
 #light-list {
   -fx-font-family: 'Noto Sans JP Regular';
@@ -93,6 +77,12 @@
   -fx-font-size: 14;
 }
 
+
+/* Set Icon Style */
+#icon {
+  -fx-fill: #2F2E2E;
+}
+
 #search-icon {
   -fx-fill: #2F2E2E;
 }
@@ -102,15 +92,11 @@
   -fx-scale-y: 0.72;
 }
 
-#sk-logo:hover {
-  -fx-scale-x: 1.2;
-  -fx-scale-y: 1.2;
+#pane-grow:hover {
+  -fx-scale-x: 0.78;
+  -fx-scale-y: 0.78;
 }
 
-
-#icon {
-  -fx-fill: #2F2E2E;
-}
 
 #chev-icon {
   -fx-fill: #ffffff;
@@ -130,16 +116,23 @@
   -fx-scale-y: 0.72;
 }
 
+#sk-big-title {
+  -fx-font-family: "Nexa Bold";
+}
+
+#sk-logo:hover {
+  -fx-scale-x: 1.2;
+  -fx-scale-y: 1.2;
+}
+
+
+/* Set Global Style */
 #bg {
   -fx-background-color: #ffffff;
 }
 
 #bg-i {
   -fx-background-color: #eeeeee;
-}
-
-#ln {
-  -fx-stroke: #2F2E2E;
 }
 
 .text-field {
@@ -173,27 +166,27 @@
   -fx-text-fill: #2F2E2E;
 }
 
+
+/* Set Shape Style */
+#ln {
+  -fx-stroke: #2F2E2E;
+}
+
 #circle:hover {
   -fx-opacity: 1;
 }
 
 
 /* Set loginPage Style */
-
-#loginPg-btn-1:hover {
-  -fx-font-family: 'Nexa Bold';
-  -fx-font-size: 14;
-}
-
 #loginPg-btn-1 {
   -fx-font-family: 'Nexa Light';
   -fx-text-fill: #2F2E2E;
   -fx-font-size: 14;
 }
 
-#loginPg-btn-2:hover {
+#loginPg-btn-1:hover {
   -fx-font-family: 'Nexa Bold';
-  -fx-font-size: 20;
+  -fx-font-size: 14;
 }
 
 #loginPg-btn-2 {
@@ -202,9 +195,13 @@
   -fx-font-size: 20;
 }
 
+#loginPg-btn-2:hover {
+  -fx-font-family: 'Nexa Bold';
+  -fx-font-size: 20;
+}
+
 
 /* Set newaccPage Style */
-
 #newacc-btn {
   -fx-font-family: 'Nexa Bold';
   -fx-text-fill: #2F2E2E;
@@ -216,17 +213,17 @@
   -fx-scale-y: 1.1;
 }
 
-/* Set homePage Style */
 
+/* Set homePage Style */
 #card-bold {
   -fx-font-family: 'Nexa Bold';
-  -fx-text-fill: #2F2E2E;
+  -fx-text-fill: #ffffff;
   -fx-line-spacing: 0;
 }
 
 #card-light {
   -fx-font-family: 'Nexa Regular';
-  -fx-text-fill: #2F2E2E;
+  -fx-text-fill: #ffffff;
   -fx-line-spacing: 0;
 }
 
@@ -235,14 +232,14 @@
   -fx-opacity: 0.90;
 }
 
+
+/* Set settingPage Style */
+#sc-btn {
+  -fx-fill: #2F2E2E;
+}
+
 #card-sp-b:hover {
   -fx-scale-x: 1.05;
   -fx-scale-y: 1.05;
   -fx-font-size: 10px;
-}
-
-/* Set Settings Style */
-
-#sc-btn {
-  -fx-fill: #2F2E2E;
 }
